Fix issue with Google scholar link not showing on publications page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -67,7 +67,6 @@ ins {
   text-decoration: none;
   border-bottom: 1px solid $text-color;
   a {
-    color: inherit;
   }
 }
 
